kubernetes/manifest/site-nginx/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  labels:
    app: nginx
spec:
  ports:
    - port: 8080 # the port that this service should serve on
      targetPort: 80 #Container Port
      protocol: TCP
  selector:
    app: nginx
