kubernetes/manifest/site-nginx/nginx-ingress.yaml
  apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    name: example
    namespace: default
  spec:
    ingressClassName: nginx
    rules:
      - host: <your.dns.com.br>
        http:
          paths:
            - backend:
                service:
                  name: nginx
                  port:
                    number: 8080
              path: /
              pathType: Prefix
